syntax = "proto3";

package product_to_profile;

import "Messages.proto";

service ProductToProfile {
  // Important! This method does not get the 
  // data of instructors of the given ids, but those whose ids do not belong to given ids list
  rpc GetOtherInstructorsData(product_microservice.InstructorIdsRequest) returns (product_microservice.InstructorsDataResponse);
};